# Balancer

./: .gitignore  CMakeLists.txt  main.cpp  ui_coordinate_popup.h  ui_mrb_window.h
Documentatie/: projection_test.xlsx
QT/: coordinate_popup.ui  mrb_window.ui  pidController.cpp  pidController.hpp  ui_CoordinatePopup.cpp  ui_CoordinatePopup.hpp  ui_mrb_window.cpp  ui_mrb_window.hpp
Tests/: projection_test.xlsx  test_calculations.cpp
arduino/: Makefile.due  Makefile.link
arduino/code/: main.cpp
headers/: pidController.hpp
motorcontroller.ino/: motorcontroller.ino.ino
motorcontroller.ino/try_2_at_motorcontrol/: try_2_at_motorcontrol.ino
sources/: pidController.cpp
